# langchain-v0-fr

./: Module-00-introduction-LLM-LangChain-LangGraph-agent-RAG.md  Module-00-pratique-hello-world-venv-Docker.md  Module-00-pratique-introduction-LLM-LangChain-LangGraph-agent-RAG.md  Module-00-quiz-introduction-LLM-LangChain-LangGraph-agent-RAG.md  README.md
Module00-intro-langchain-ia-agentique/: Module-00-introduction-LLM-LangChain-LangGraph-agent-RAG.md  Module-00-pratique-1-OpenAI-clef-API.md  Module-00-pratique-2-Ollama-local.md  Module-00-pratique-introduction-LLM-LangChain-LangGraph-agent-RAG.md  Module-00-quiz-introduction-LLM-LangChain-LangGraph-agent-RAG.md  Module-00-resume-commandes-hello-world-LangChain.md  README.md
Module00-intro-langchain-ia-agentique/langchain-course-project-hello-world/: Dockerfile  README.md  docker-compose.yml  main.py
Module00-intro-langchain-ia-agentique/langchain-course-project-hello-world-local/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
Module00-intro-langchain-ia-agentique/langchain-course-project-hello-world-openai/: README.md  docker-compose.yml  main.py  pyproject.toml
