[project]
name = "langchain-hello-world-openai"
version = "0.1.0"
description = "Hello World LangChain - Version OpenAI (Pratique 1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "python-dotenv>=1.1.1",
]
